MyDemoOrg/force-app/main/default/objects/signature__Step__c/signature__Step__c.object-meta.xml
<CustomObject>
    <description>Signature Steps</description>
    <label>ß Step</label>
    <nameField>
        <displayFormat>SS{000000}</displayFormat>
        <label>SS#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ß Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>