MyDemoOrg/force-app/main/default/objects/signature__Step__c/fields/signature__ActualSignedLocation__c.field-meta.xml
<CustomField>
    <fullName>signature__ActualSignedLocation__c</fullName>
    <label>Actual Signed Location</label>
    <scale>15</scale>
    <type>Location</type>
</CustomField>