MyDemoOrg/force-app/main/default/objects/signature__Step__c/fields/signature__ActualSignedTimestamp__c.field-meta.xml
<CustomField>
    <fullName>signature__ActualSignedTimestamp__c</fullName>
    <label>Actual Signed Timestamp</label>
    <type>DateTime</type>
</CustomField>