MyDemoOrg/force-app/main/default/objects/signature__Step__c/fields/signature__ActualSignedUser__c.field-meta.xml
<CustomField>
    <fullName>signature__ActualSignedUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Actual Signed User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Steps</relationshipName>
    <type>Lookup</type>
</CustomField>