MyDemoOrg/force-app/main/default/objects/signature__Step__c/fields/signature__Clicked__c.field-meta.xml
<CustomField>
    <fullName>signature__Clicked__c</fullName>
    <label>Clicked</label>
    <type>DateTime</type>
</CustomField>