MyDemoOrg/force-app/main/default/objects/signature__Step__c/fields/signature__Contact__c.field-meta.xml
<CustomField>
    <fullName>signature__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Signature Steps</relationshipLabel>
    <relationshipName>Steps</relationshipName>
    <type>Lookup</type>
</CustomField>