MyDemoOrg/force-app/main/default/objects/signature__Step__c/fields/signature__Disable_Processing__c.field-meta.xml
<CustomField>
    <fullName>signature__Disable_Processing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Processing</label>
    <type>Checkbox</type>
</CustomField>