MyDemoOrg/force-app/main/default/objects/signature__Step__c/fields/signature__DoNotSentFinalPDF__c.field-meta.xml
<CustomField>
    <fullName>signature__DoNotSentFinalPDF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Send Final PDF</label>
    <type>Checkbox</type>
</CustomField>