MyDemoOrg/force-app/main/default/objects/signature__Step__c/fields/signature__Email__c.field-meta.xml
<CustomField>
    <fullName>signature__Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>