MyDemoOrg/force-app/main/default/objects/signature__Step__c/fields/signature__Emailed__c.field-meta.xml
<CustomField>
    <fullName>signature__Emailed__c</fullName>
    <label>Emailed</label>
    <type>DateTime</type>
</CustomField>