MyDemoOrg/force-app/main/default/objects/signature__Step__c/fields/signature__EmailTemplate__c.field-meta.xml
<CustomField>
    <fullName>signature__EmailTemplate__c</fullName>
    <label>Email Template</label>
    <length>200</length>
    <type>Text</type>
</CustomField>