MyDemoOrg/force-app/main/default/objects/signature__Step__c/fields/signature__Firstname__c.field-meta.xml
<CustomField>
    <fullName>signature__Firstname__c</fullName>
    <label>Firstname</label>
    <length>80</length>
    <type>Text</type>
</CustomField>