MyDemoOrg/force-app/main/default/objects/signature__Step__c/fields/signature__ImageName__c.field-meta.xml
<CustomField>
    <fullName>signature__ImageName__c</fullName>
    <label>Image Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>