MyDemoOrg/force-app/main/default/objects/signature__Step__c/fields/signature__IPWhenSignedInfo__c.field-meta.xml
<CustomField>
    <fullName>signature__IPWhenSignedInfo__c</fullName>
    <label>IP When Signed Info</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>