MyDemoOrg/force-app/main/default/objects/signature__Step__c/fields/signature__IsUpdate__c.field-meta.xml
<CustomField>
    <fullName>signature__IsUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsUpdate</label>
    <type>Checkbox</type>
</CustomField>