MyDemoOrg/force-app/main/default/objects/signature__Step__c/fields/signature__LastName__c.field-meta.xml
<CustomField>
    <fullName>signature__LastName__c</fullName>
    <label>Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>