MyDemoOrg/force-app/main/default/objects/signature__Step__c/fields/signature__Lead__c.field-meta.xml
<CustomField>
    <fullName>signature__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Signature Steps</relationshipLabel>
    <relationshipName>Steps</relationshipName>
    <type>Lookup</type>
</CustomField>