MyDemoOrg/force-app/main/default/objects/signature__Step__c/fields/signature__Process_Immediately__c.field-meta.xml
<CustomField>
    <fullName>signature__Process_Immediately__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Process Immediately</label>
    <type>Checkbox</type>
</CustomField>