MyDemoOrg/force-app/main/default/objects/signature__Step__c/fields/signature__Requested__c.field-meta.xml
<CustomField>
    <fullName>signature__Requested__c</fullName>
    <label>Requested</label>
    <type>DateTime</type>
</CustomField>