MyDemoOrg/force-app/main/default/objects/signature__Step__c/fields/signature__Signature__c.field-meta.xml
<CustomField>
    <fullName>signature__Signature__c</fullName>
    <label>Signature</label>
    <referenceTo>signature__Signature__c</referenceTo>
    <relationshipLabel>Steps</relationshipLabel>
    <relationshipName>Steps</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>