MyDemoOrg/force-app/main/default/objects/signature__Step__c/fields/signature__SignatureImage__c.field-meta.xml
<CustomField>
    <fullName>signature__SignatureImage__c</fullName>
    <label>Signature Image</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>