MyDemoOrg/force-app/main/default/objects/signature__Step__c/fields/signature__Signed__c.field-meta.xml
<CustomField>
    <fullName>signature__Signed__c</fullName>
    <label>Signed</label>
    <type>DateTime</type>
</CustomField>