MyDemoOrg/force-app/main/default/objects/signature__Step__c/fields/signature__SiteURL__c.field-meta.xml
<CustomField>
    <fullName>signature__SiteURL__c</fullName>
    <formula>if ( isblank ( $Setup.signature__Option__c.signature__SiteURL__c ), &quot;http://THIS_SHOULD_BE_YOUR_SITE_BASE_URL/&quot;,
$Setup.signature__Option__c.signature__SiteURL__c )</formula>
    <label>Site URL</label>
    <type>Text</type>
</CustomField>