MyDemoOrg/force-app/main/default/objects/signature__Step__c/fields/signature__Status__c.field-meta.xml
<CustomField>
    <fullName>signature__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
                <default>true</default>
                <label>Requested</label>
            </value>
            <value>
                <fullName>Emailed</fullName>
            </value>
            <value>
                <fullName>Viewed</fullName>
            </value>
            <value>
                <fullName>Clicked</fullName>
            </value>
            <value>
                <fullName>Not Approved</fullName>
            </value>
            <value>
                <fullName>Signed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>