MyDemoOrg/force-app/main/default/objects/signature__Step__c/fields/signature__Viewed__c.field-meta.xml
<CustomField>
    <fullName>signature__Viewed__c</fullName>
    <label>Viewed</label>
    <type>DateTime</type>
</CustomField>