MyDemoOrg/force-app/main/default/objects/signature__Step__c/fields/signature__WaitOnPriorStep__c.field-meta.xml
<CustomField>
    <fullName>signature__WaitOnPriorStep__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wait On Prior Step</label>
    <type>Checkbox</type>
</CustomField>